<resources>
    <string name="app_name">GithHubAPI_Ade</string>
    <string name="searchbar_hint">Cari pengguna</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="loading_text">Mohon Tunggu Sebentar</string>
    <string name="name">Nama Hero</string>
    <string name="id">ID</string>
    <string name="avatar">Avatar</string>
    <string name="nama_kosong">A</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="dont_have_fllwer">Tidak ada follow</string>
    <string name="favorite">Favorite</string>
    <string name="empty_text">Tidak Ada Favorite</string>
    <string name="theme">Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>