<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/github" />

    <ProgressBar
        android:id="@+id/pb_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mohon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pb_hero"
        android:layout_centerInParent="true"
        android:text="@string/loading_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_hero" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/donat"
        android:text="@string/nama_kosong"
        android:textColor="#4F709C"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/donat"
        android:text="@string/nama_kosong"
        android:textColor="#4F709C"
        android:textSize="14sp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/follower_acc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_kosong"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/separator"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toStartOf="@id/following_acc"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toEndOf="@id/follower_acc"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/following_acc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama_kosong"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/follower"
            app:layout_constraintEnd_toEndOf="@id/follower_acc"
            app:layout_constraintStart_toStartOf="@id/follower_acc"
            app:layout_constraintTop_toBottomOf="@id/follower_acc" />

        <TextView
            android:id="@+id/text_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/following"
            app:layout_constraintEnd_toEndOf="@id/following_acc"
            app:layout_constraintStart_toStartOf="@id/following_acc"
            app:layout_constraintTop_toBottomOf="@id/following_acc" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="3dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintStart_toStartOf="@id/text_following"
            app:layout_constraintTop_toBottomOf="@id/text_following" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="3dp"
            android:src="@drawable/baseline_share_24"
            app:layout_constraintStart_toStartOf="@id/text_follower"
            app:layout_constraintTop_toBottomOf="@id/text_follower" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/tabStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/tab_layout" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>